Scrive integration is ready

--- a/extensions/konsumentkollen/blocks/konsumentkollen.liquid
+++ b/extensions/konsumentkollen/blocks/konsumentkollen.liquid
@@ -139,7 +139,7 @@
       "type": "text",
       "id": "redirect_url",
       "label": "Redirect URL till Scrive",
-      "default": "https://din-backend.com/start-scrive"
+      "default": "https://scrive.com/form/c4edadb9-6d35-4088-a03e-ef021a500bb1"
     }
   ]
 }
