Improve admin overview and add confirmation email setting

--- a/extensions/konsumentkollen/blocks/konsumentkollen.liquid
+++ b/extensions/konsumentkollen/blocks/konsumentkollen.liquid
@@ -132,7 +132,7 @@
 
 {% schema %}
 {
-  "name": "Konsumentkollen Checkout Bar",
+  "name": "Konsumentkollen",
   "target": "section",
   "settings": [
     {
